--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="inpt">
       <div class="input-group">
         <label class="input-group__label" for="myInput">Cards Opened</label>
-        <input type="text" id="myInput" class="input-group__input" value="Input the amount of starting cards" />
+        <input type="text" id="myInput" class="input-group__input" placeholder="Input the amount of starting cards" />
         <button onclick="returnText()">Submit</button>
       </div>
     </div>
